# GraphXiv

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  graphxiv  pyproject.toml  pyrightconfig.json  requirements-benchmark.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_crawl_state_unique_source.py  0003_paper_citations_unique.py  0004_fix_embeddings_dim.py
app/: celery_app.py  config.py  db.py  models.py
app/api/: cache.py  deps.py  main.py  schemas.py
app/crawler/: __init__.py  arxiv_assets.py  arxiv_oai.py  pmc_oai.py  run_harvest.py  utils.py
app/parsers/: grobid.py
app/tasks/: ingest.py  normalize.py  parse.py  parse_helpers.py  router.py
benchmark/: FINDINGS.md  analyze_results.py  create_gt.py  metrics.py  populate_db_grobid.py  populate_db_mineru.py  reextract_gt_figs_formulas.py  reextract_gt_refs.py  run_benchmark.py  sample.json  select_sample.py
benchmark/gt/: 0026b418-fbb7-4212-a172-515472f20db1.json  01fd2fa8-a94c-4f9d-bf3b-f9754df351c9.json  04170766-b7ba-49dc-81db-4bfdf966d9b9.json  0683c60b-3140-49d6-b63c-d45767ff7e80.json  0778679b-7e8c-4249-9e48-26fdc1dce037.json  07b6c03e-d715-4e58-8f52-0fe2060f7aa2.json  07be9c5f-205a-4bef-8bd1-b941a3a18576.json  0a2457bd-8ea4-47b9-bb87-5f1f658366d3.json  0bd004da-e2ce-4c62-8acc-dedd2af65fd3.json  0ff61f66-100e-4712-a960-7a5179812340.json  10aa4d57-18b9-42a1-ad99-656887d2a29b.json  1264a7b3-878c-455d-a3dd-958d7e9c34ee.json  13fbbe70-498d-4f8c-86aa-07ac45c8badd.json  157520d4-b826-4526-b32d-91f0f4618d85.json  183ddbfe-4a5a-4f05-88ef-90de964ba0af.json  18b540a6-e094-4ee0-b46d-3199fb11483c.json  18eb8b7a-1fea-4de4-b990-3216c2668d57.json  1dfcbd76-f856-40f5-ab1e-a6c59933af67.json  1e134e12-1055-4034-812d-d9886100b299.json  21b607c5-5d40-4f34-91e3-bf0bbd926b5b.json  21e44e6b-44d2-4ad8-a8b1-e57b4f01908e.json  2223652e-58d0-4b8c-b537-4fe3c8526dee.json  2275312d-ec6c-48d0-bd12-0b5104211e85.json  23112067-64a6-416e-a461-5c59fd84326d.json  235daa29-749f-4632-b9a2-021996c28f4a.json  24cfd54b-cf68-469b-ac64-b988e4967f76.json  (+124 more)
cli/: __init__.py  graphxiv.py
eval/: FINDINGS.md  __init__.py  analyze.py  build_questions.py  candidates.json  demo.py  ingest_for_eval.py  questions.json  rubric.md  run_eval.py  score.py
report/: graphxiv_report.tex  references.bib
sdk/: .gitignore  LICENSE  MANIFEST.in  README.md  README.zh.md  pyproject.toml
sdk/deepxiv_sdk/: __init__.py  cli.py  reader.py
sdk/deepxiv_sdk/agent/: __init__.py  agent.py  graph.py  prompts.py  state.py  tools.py
sdk/examples/: README.md  example_advanced.py  example_agent.py  example_error_handling.py  example_reader.py  example_trending.py  quickstart.py
sdk/tests/: conftest.py  test_agent.py  test_contract.py  test_integration.py  test_mcp_server.py  test_reader.py  test_trending.py
tests/: conftest.py  test_api.py  test_benchmark.py  test_eval.py  test_infra.py  test_ingest.py  test_normalize.py  test_parse.py
(+96 files in other folders)
