[project]
name = "dats5990-papers"
version = "0.1.0"
description = "Research knowledge graph platform for academic papers"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy==2.0.49",
    "alembic==1.18.4",
    "celery[redis]==5.4.0",
    "redis==5.2.1",
    "psycopg2-binary==2.9.11",
    "pgvector==0.4.2",
    "pydantic-settings==2.13.1",
    "flower==2.0.1",
    "httpx==0.28.1",
    "tenacity==9.1.4",
    "aiolimiter==1.2.1",
    "sickle==0.7.0",
    "lxml==6.0.4",
    "doc2json @ git+https://github.com/allenai/s2orc-doc2json@71c022ed4bed3ffc71d22c2ac5cdbc133ad04e3c",
    "magic-pdf[full]>=1.3.12",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-timeout",
    "pytest-httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["gpu: marks tests that require GPU (deselect with '-m not gpu')"]
